//! ç»Ÿä¸€é…ç½®ç®¡ç†å‘å¯¼
//!
//! ä½¿ç”¨ config crate å®šä¹‰çš„ç»Ÿä¸€é…ç½®ç»“æ„ï¼Œé€šè¿‡äº¤äº’å¼æ–¹å¼ç”Ÿæˆé…ç½®æ–‡ä»¶

use crate::system::{NetworkUtils, clear_input_buffer, validate_port};
use actrix_common::config::bind::{HttpBindConfig, HttpsBindConfig};
use actrix_common::config::{self, ActrixConfig, BindConfig, SupervisorConfig, TurnConfig};
use anyhow::{Context, Result};
use dialoguer::{Confirm, Input, Select, theme::ColorfulTheme};
use std::net::IpAddr;
use std::path::{Path, PathBuf};
use toml_edit::{DocumentMut, Item, Table, value};

/// ç»Ÿä¸€é…ç½®å‘å¯¼
pub struct UnifiedConfigWizard {
    debug: bool,
    theme: ColorfulTheme,
}

impl UnifiedConfigWizard {
    pub fn new(debug: bool) -> Self {
        Self {
            debug,
            theme: ColorfulTheme::default(),
        }
    }

    /// è¿è¡Œé…ç½®å‘å¯¼ï¼Œè¿”å›ç”Ÿæˆçš„é…ç½®æ–‡ä»¶è·¯å¾„
    pub fn run(&mut self) -> Result<PathBuf> {
        println!("ğŸš€ Actor-RTC è¾…åŠ©æœåŠ¡é…ç½®å‘å¯¼");
        println!("â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•");
        println!("ä½¿ç”¨ç»Ÿä¸€é…ç½®ç®¡ç†ç³»ç»Ÿï¼ŒåŸºäºç±»å‹å®‰å…¨çš„é…ç½®ç»“æ„");
        println!();

        // ç¬¬1æ­¥ï¼šé€‰æ‹©é…ç½®æ–‡ä»¶ä½ç½®
        let output_path = self.choose_config_location()?;

        // ç¬¬2æ­¥ï¼šè¯»å–æ¨¡æ¿æ–‡ä»¶
        let template_content = self.load_template()?;

        // ç¬¬3æ­¥ï¼šäº¤äº’å¼é…ç½®æ”¶é›†
        let config = self.collect_configuration()?;

        // ç¬¬4æ­¥ï¼šç”Ÿæˆæœ€ç»ˆé…ç½®æ–‡ä»¶
        self.generate_config_file(&config, &template_content, &output_path)?;

        println!("âœ… é…ç½®æ–‡ä»¶ç”ŸæˆæˆåŠŸï¼");
        println!("ğŸ“„ æ–‡ä»¶ä½ç½®: {}", output_path.display());

        Ok(output_path)
    }

    /// åŠ è½½é…ç½®æ¨¡æ¿æ–‡ä»¶
    fn load_template(&self) -> Result<String> {
        let template_path = Path::new("tpl/config.template.toml");
        if !template_path.exists() {
            anyhow::bail!("é…ç½®æ¨¡æ¿æ–‡ä»¶ä¸å­˜åœ¨: {}", template_path.display());
        }

        std::fs::read_to_string(template_path)
            .with_context(|| format!("æ— æ³•è¯»å–é…ç½®æ¨¡æ¿æ–‡ä»¶: {}", template_path.display()))
    }

    /// äº¤äº’å¼æ”¶é›†é…ç½®ä¿¡æ¯
    fn collect_configuration(&self) -> Result<ActrixConfig> {
        let mut config = ActrixConfig::default();

        // æœåŠ¡é€‰æ‹©
        self.configure_services(&mut config)?;

        // åŸºæœ¬ç³»ç»Ÿé…ç½®
        self.configure_basic_settings(&mut config)?;

        // ç½‘ç»œé…ç½®
        self.configure_network(&mut config)?;

        // æ¡ä»¶æ€§é…ç½®
        if config.is_turn_enabled() {
            self.configure_turn(&mut config)?;
        }

        if self.needs_supervisor(&config) {
            self.configure_supervisor(&mut config)?;
        }

        Ok(config)
    }

    /// é…ç½®å¯ç”¨çš„æœåŠ¡
    fn configure_services(&self, config: &mut ActrixConfig) -> Result<()> {
        println!("ğŸ“‹ æœåŠ¡é€‰æ‹©");
        println!("===========");

        let service_options = vec![
            ("Signaling (ä¿¡ä»¤æœåŠ¡)", config::ENABLE_SIGNALING),
            ("STUN (NAT å‘ç°)", config::ENABLE_STUN),
            ("TURN (æµé‡ä¸­ç»§)", config::ENABLE_TURN),
            ("AIS (èº«ä»½è®¤è¯æœåŠ¡)", config::ENABLE_AIS),
        ];

        let mut enable_mask = 0u8;

        for (service_name, mask) in &service_options {
            let enabled = Confirm::with_theme(&self.theme)
                .with_prompt(format!("å¯ç”¨ {}", service_name))
                .default(true)
                .interact()?;

            if enabled {
                enable_mask |= mask;
            }
        }

        if enable_mask == 0 {
            anyhow::bail!("è‡³å°‘éœ€è¦å¯ç”¨ä¸€ä¸ªæœåŠ¡");
        }

        config.enable = enable_mask;
        println!(
            "âœ… å¯ç”¨çš„æœåŠ¡: 0b{:05b} (åè¿›åˆ¶: {})",
            enable_mask, enable_mask
        );
        println!();

        Ok(())
    }

    /// é…ç½®åŸºæœ¬ç³»ç»Ÿè®¾ç½®
    fn configure_basic_settings(&self, config: &mut ActrixConfig) -> Result<()> {
        println!("âš™ï¸  åŸºæœ¬è®¾ç½®");
        println!("============");

        // æœåŠ¡å™¨åç§°
        config.name = Input::with_theme(&self.theme)
            .with_prompt("æœåŠ¡å™¨å®ä¾‹åç§°")
            .default(config.name.clone())
            .interact_text()?;

        // è¿è¡Œç¯å¢ƒ
        let env_options = vec!["dev", "prod", "test"];
        let env_index = Select::with_theme(&self.theme)
            .with_prompt("è¿è¡Œç¯å¢ƒ")
            .items(&env_options)
            .default(0)
            .interact()?;
        config.env = env_options[env_index].to_string();

        // ä½ç½®æ ‡ç­¾
        config.location_tag = Input::with_theme(&self.theme)
            .with_prompt("ä½ç½®æ ‡ç­¾")
            .default(config.location_tag.clone())
            .interact_text()?;

        // æ—¥å¿—çº§åˆ«
        let log_levels = vec!["trace", "debug", "info", "warn", "error"];
        let log_index = Select::with_theme(&self.theme)
            .with_prompt("æ—¥å¿—çº§åˆ«")
            .items(&log_levels)
            .default(2) // info
            .interact()?;
        config.observability.filter_level = log_levels[log_index].to_string();

        // æ•°æ®åº“è·¯å¾„
        let sqlite_path_str = Input::with_theme(&self.theme)
            .with_prompt("SQLite æ•°æ®åº“å­˜å‚¨ç›®å½•è·¯å¾„")
            .default(config.sqlite_path.display().to_string())
            .interact_text()?;
        config.sqlite_path = PathBuf::from(sqlite_path_str);

        // è¿è¡Œç”¨æˆ·ï¼ˆå¯é€‰ï¼‰
        let use_custom_user = Confirm::with_theme(&self.theme)
            .with_prompt("é…ç½®è¿è¡Œç”¨æˆ·å’Œç»„")
            .default(false)
            .interact()?;

        if use_custom_user {
            let user: String = Input::with_theme(&self.theme)
                .with_prompt("è¿è¡Œç”¨æˆ·")
                .default("actor-rtc".to_string())
                .interact_text()?;
            config.user = Some(user);

            let group: String = Input::with_theme(&self.theme)
                .with_prompt("è¿è¡Œç”¨æˆ·ç»„")
                .default("actor-rtc".to_string())
                .interact_text()?;
            config.group = Some(group);
        }

        println!();
        Ok(())
    }

    /// é…ç½®ç½‘ç»œè®¾ç½®
    fn configure_network(&self, config: &mut ActrixConfig) -> Result<()> {
        println!("ğŸŒ ç½‘ç»œé…ç½®");
        println!("===========");

        // é€‰æ‹©æœåŠ¡å™¨åœ°å€
        let server_host = self.select_server_host()?;

        // é…ç½® HTTP ç»‘å®šï¼ˆå¦‚æœéœ€è¦ï¼‰
        if self.needs_http_services(config) {
            let use_http = if config.env == "dev" {
                Confirm::with_theme(&self.theme)
                    .with_prompt("å¯ç”¨ HTTP æœåŠ¡ï¼ˆå¼€å‘ç¯å¢ƒï¼‰")
                    .default(true)
                    .interact()?
            } else {
                false
            };

            if use_http {
                let http_port = self.prompt_port("HTTP ç«¯å£", 8080)?;
                config.bind.http = Some(HttpBindConfig {
                    domain_name: "localhost".to_string(),
                    advertised_ip: server_host.clone(),
                    ip: "0.0.0.0".to_string(),
                    port: http_port,
                });
            }
        }

        // é…ç½® HTTPS ç»‘å®šï¼ˆç”Ÿäº§ç¯å¢ƒå¿…éœ€ï¼‰
        if self.needs_http_services(config) {
            let use_https = if config.env == "prod" {
                true
            } else {
                Confirm::with_theme(&self.theme)
                    .with_prompt("å¯ç”¨ HTTPS æœåŠ¡")
                    .default(false)
                    .interact()?
            };

            if use_https {
                let https_port = self.prompt_port("HTTPS ç«¯å£", 8443)?;

                let cert_path: String = Input::with_theme(&self.theme)
                    .with_prompt("SSL è¯ä¹¦æ–‡ä»¶è·¯å¾„")
                    .default("certificates/server.crt".to_string())
                    .interact_text()?;

                let key_path: String = Input::with_theme(&self.theme)
                    .with_prompt("SSL ç§é’¥æ–‡ä»¶è·¯å¾„")
                    .default("certificates/server.key".to_string())
                    .interact_text()?;

                config.bind.https = Some(HttpsBindConfig {
                    domain_name: "localhost".to_string(),
                    advertised_ip: server_host.clone(),
                    ip: "0.0.0.0".to_string(),
                    port: https_port,
                    cert: cert_path,
                    key: key_path,
                });
            }
        }

        // é…ç½® ICE ç»‘å®šï¼ˆå¦‚æœéœ€è¦ï¼‰
        if config.is_ice_enabled() {
            let ice_port = self.prompt_port("ICE ç«¯å£ (STUN/TURN)", 3478)?;
            config.bind.ice.ip = "0.0.0.0".to_string();
            config.bind.ice.port = ice_port;
        }

        println!();
        Ok(())
    }

    /// é…ç½® TURN æœåŠ¡
    fn configure_turn(&self, config: &mut ActrixConfig) -> Result<()> {
        println!("ğŸ”„ TURN æœåŠ¡é…ç½®");
        println!("================");

        config.turn.advertised_ip = Input::with_theme(&self.theme)
            .with_prompt("TURN å…¬ç½‘ IP åœ°å€")
            .default(config.turn.advertised_ip.clone())
            .interact_text()?;

        config.turn.advertised_port =
            self.prompt_port("TURN å…¬ç½‘ç«¯å£", config.turn.advertised_port)?;

        config.turn.realm = Input::with_theme(&self.theme)
            .with_prompt("TURN è®¤è¯åŸŸ")
            .default(config.turn.realm.clone())
            .interact_text()?;

        config.turn.relay_port_range = Input::with_theme(&self.theme)
            .with_prompt("ä¸­ç»§ç«¯å£èŒƒå›´ (æ ¼å¼: å¼€å§‹-ç»“æŸ)")
            .default(config.turn.relay_port_range.clone())
            .interact_text()?;

        println!();
        Ok(())
    }

    /// é…ç½® Supervisor é›†æˆ
    fn configure_supervisor(&self, config: &mut ActrixConfig) -> Result<()> {
        println!("ğŸ‘¥ Supervisor å¹³å°é›†æˆ");
        println!("======================");

        let node_id: String = Input::with_theme(&self.theme)
            .with_prompt("èŠ‚ç‚¹ ID")
            .interact_text()?;

        let server_addr: String = Input::with_theme(&self.theme)
            .with_prompt("Supervisor gRPC æœåŠ¡å™¨åœ°å€")
            .default("http://localhost:50051".to_string())
            .interact_text()?;

        let enable_tls: bool = Confirm::with_theme(&self.theme)
            .with_prompt("å¯ç”¨ TLS?")
            .default(false)
            .interact()?;

        let tls_domain = if enable_tls {
            Some(
                Input::with_theme(&self.theme)
                    .with_prompt("TLS åŸŸå")
                    .interact_text()?,
            )
        } else {
            None
        };

        config.supervisor = Some(SupervisorConfig {
            node_id,
            server_addr,
            connect_timeout_secs: 30,
            status_report_interval_secs: 60,
            health_check_interval_secs: 30,
            enable_tls,
            tls_domain,
        });

        println!();
        Ok(())
    }

    /// ç”Ÿæˆæœ€ç»ˆé…ç½®æ–‡ä»¶
    fn generate_config_file(
        &self,
        config: &ActrixConfig,
        template: &str,
        output_path: &Path,
    ) -> Result<()> {
        let mut doc = template
            .parse::<DocumentMut>()
            .with_context(|| "è§£æé…ç½®æ¨¡æ¿å¤±è´¥")?;

        // æ›´æ–°é…ç½®å€¼
        self.update_config_document(&mut doc, config)?;

        // å†™å…¥æ–‡ä»¶
        if !self.debug {
            if let Some(parent) = output_path.parent() {
                std::fs::create_dir_all(parent)
                    .with_context(|| format!("åˆ›å»ºé…ç½®ç›®å½•å¤±è´¥: {}", parent.display()))?;
            }

            std::fs::write(output_path, doc.to_string())
                .with_context(|| format!("å†™å…¥é…ç½®æ–‡ä»¶å¤±è´¥: {}", output_path.display()))?;
        } else {
            println!("ğŸ› è°ƒè¯•æ¨¡å¼: é…ç½®æ–‡ä»¶å†…å®¹:");
            println!("{}", doc.to_string());
        }

        Ok(())
    }

    /// æ›´æ–°é…ç½®æ–‡æ¡£
    fn update_config_document(&self, doc: &mut DocumentMut, config: &ActrixConfig) -> Result<()> {
        // åŸºæœ¬é…ç½®
        doc["enable"] = value(config.enable as i64);
        doc["name"] = value(&config.name);
        doc["env"] = value(&config.env);
        doc["location_tag"] = value(&config.location_tag);
        doc["sqlite_path"] = value(config.sqlite_path.display().to_string().as_str());

        // å¯è§‚æµ‹æ€§é…ç½®
        let mut observability_table = Table::new();
        observability_table["filter_level"] = value(&config.observability.filter_level);
        let mut log_table = Table::new();
        log_table["output"] = value(&config.observability.log.output);
        log_table["rotate"] = value(config.observability.log.rotate);
        log_table["path"] = value(&config.observability.log.path);
        observability_table["log"] = Item::Table(log_table);

        let tracing_cfg = &config.observability.tracing;
        let mut tracing_table = Table::new();
        tracing_table["enable"] = value(tracing_cfg.enable);
        tracing_table["service_name"] = value(&tracing_cfg.service_name);
        tracing_table["endpoint"] = value(&tracing_cfg.endpoint);
        observability_table["tracing"] = Item::Table(tracing_table);

        doc["observability"] = Item::Table(observability_table);

        // å¯é€‰å­—æ®µ
        if let Some(ref user) = config.user {
            doc["user"] = value(user);
        }
        if let Some(ref group) = config.group {
            doc["group"] = value(group);
        }
        if let Some(ref pid) = config.pid {
            doc["pid"] = value(pid);
        }

        // ç½‘ç»œé…ç½®
        self.update_bind_config(doc, &config.bind)?;
        self.update_turn_config(doc, &config.turn)?;

        // Supervisor é…ç½®
        if let Some(ref supervisor) = config.supervisor {
            self.update_supervisor_config(doc, supervisor)?;
        }

        Ok(())
    }

    /// æ›´æ–°ç»‘å®šé…ç½®
    fn update_bind_config(&self, doc: &mut DocumentMut, bind: &BindConfig) -> Result<()> {
        // ç¡®ä¿ bind section å­˜åœ¨
        if !doc.contains_key("bind") {
            doc["bind"] = Item::Table(Table::new());
        }

        // HTTP é…ç½®
        if let Some(ref http) = bind.http {
            let mut http_table = Table::new();
            http_table["domain_name"] = value(&http.domain_name);
            http_table["advertised_ip"] = value(&http.advertised_ip);
            http_table["ip"] = value(&http.ip);
            http_table["port"] = value(http.port as i64);
            doc["bind"]["http"] = Item::Table(http_table);
        }

        // HTTPS é…ç½®
        if let Some(ref https) = bind.https {
            let mut https_table = Table::new();
            https_table["domain_name"] = value(&https.domain_name);
            https_table["advertised_ip"] = value(&https.advertised_ip);
            https_table["ip"] = value(&https.ip);
            https_table["port"] = value(https.port as i64);
            https_table["cert"] = value(&https.cert);
            https_table["key"] = value(&https.key);
            doc["bind"]["https"] = Item::Table(https_table);
        }

        // ICE é…ç½®
        let mut ice_table = Table::new();
        ice_table["domain_name"] = value(&bind.ice.domain_name);
        ice_table["ip"] = value(&bind.ice.ip);
        ice_table["port"] = value(bind.ice.port as i64);
        doc["bind"]["ice"] = Item::Table(ice_table);

        Ok(())
    }

    /// æ›´æ–° TURN é…ç½®
    fn update_turn_config(&self, doc: &mut DocumentMut, turn: &TurnConfig) -> Result<()> {
        if !doc.contains_key("turn") {
            doc["turn"] = Item::Table(Table::new());
        }

        doc["turn"]["advertised_ip"] = value(&turn.advertised_ip);
        doc["turn"]["advertised_port"] = value(turn.advertised_port as i64);
        doc["turn"]["relay_port_range"] = value(&turn.relay_port_range);
        doc["turn"]["realm"] = value(&turn.realm);

        Ok(())
    }

    /// æ›´æ–° Supervisor é…ç½®
    fn update_supervisor_config(
        &self,
        doc: &mut DocumentMut,
        supervisor: &SupervisorConfig,
    ) -> Result<()> {
        let mut supervisor_table = Table::new();
        supervisor_table["node_id"] = value(&supervisor.node_id);
        supervisor_table["server_addr"] = value(&supervisor.server_addr);
        supervisor_table["connect_timeout_secs"] = value(supervisor.connect_timeout_secs as i64);
        supervisor_table["status_report_interval_secs"] =
            value(supervisor.status_report_interval_secs as i64);
        supervisor_table["health_check_interval_secs"] =
            value(supervisor.health_check_interval_secs as i64);
        supervisor_table["enable_tls"] = value(supervisor.enable_tls);
        if let Some(ref domain) = supervisor.tls_domain {
            supervisor_table["tls_domain"] = value(domain);
        }
        doc["supervisor"] = Item::Table(supervisor_table);

        Ok(())
    }

    // è¾…åŠ©æ–¹æ³•
    fn needs_http_services(&self, config: &ActrixConfig) -> bool {
        config.is_signaling_enabled() || config.is_ais_enabled()
    }

    fn needs_supervisor(&self, _config: &ActrixConfig) -> bool {
        Confirm::with_theme(&self.theme)
            .with_prompt("é…ç½® Supervisor å¹³å°é›†æˆ")
            .default(false)
            .interact()
            .unwrap_or(false)
    }

    fn select_server_host(&self) -> Result<String> {
        let local_ips = NetworkUtils::get_local_ips()?;
        let mut choices: Vec<String> = local_ips
            .iter()
            .map(|ip| format!("{} ({})", ip, self.classify_ip(ip)))
            .collect();

        choices.push("è¾“å…¥è‡ªå®šä¹‰ IP/åŸŸå".to_string());

        clear_input_buffer();

        let selection = Select::with_theme(&self.theme)
            .with_prompt("é€‰æ‹©æœåŠ¡å™¨ IP æˆ–åŸŸå")
            .items(&choices)
            .default(0)
            .interact()?;

        if selection < local_ips.len() {
            Ok(local_ips[selection].to_string())
        } else {
            let custom: String = Input::with_theme(&self.theme)
                .with_prompt("è¾“å…¥è‡ªå®šä¹‰ IP æˆ–åŸŸå")
                .interact_text()?;
            Ok(custom)
        }
    }

    fn classify_ip(&self, ip: &IpAddr) -> &'static str {
        match ip {
            IpAddr::V4(ipv4) => {
                let octets = ipv4.octets();
                if octets[0] == 127 {
                    "æœ¬åœ°å›ç¯"
                } else if octets[0] == 10
                    || (octets[0] == 172 && octets[1] >= 16 && octets[1] <= 31)
                    || (octets[0] == 192 && octets[1] == 168)
                {
                    "ç§æœ‰ IPv4"
                } else {
                    "å…¬ç½‘ IPv4"
                }
            }
            IpAddr::V6(_) => "IPv6",
        }
    }

    fn prompt_port(&self, service: &str, default: u16) -> Result<u16> {
        clear_input_buffer();

        loop {
            let input: String = Input::with_theme(&self.theme)
                .with_prompt(format!("{} ç«¯å£", service))
                .default(default.to_string())
                .interact_text()?;

            if input == default.to_string() {
                return Ok(default);
            }

            match input.parse::<u16>() {
                Ok(port) if validate_port(port) => return Ok(port),
                _ => println!("âŒ æ— æ•ˆç«¯å£ã€‚è¯·è¾“å…¥ 1-65535 ä¹‹é—´çš„ç«¯å£å·ã€‚"),
            }
        }
    }

    fn choose_config_location(&self) -> Result<PathBuf> {
        println!("ğŸ“ é…ç½®æ–‡ä»¶ä½ç½®");
        println!("===============");

        clear_input_buffer();

        let default_path = PathBuf::from("/etc/actor-rtc-actrix/config.toml");

        let config_path: String = Input::with_theme(&self.theme)
            .with_prompt("é…ç½®æ–‡ä»¶è·¯å¾„")
            .default(default_path.to_string_lossy().to_string())
            .interact_text()?;

        let path = PathBuf::from(config_path);

        // æ£€æŸ¥æ–‡ä»¶æ˜¯å¦å·²å­˜åœ¨
        if path.exists() {
            println!("âš ï¸  é…ç½®æ–‡ä»¶å·²å­˜åœ¨: {}", path.display());
            let overwrite = Confirm::with_theme(&self.theme)
                .with_prompt("è¦†ç›–ç°æœ‰æ–‡ä»¶ï¼Ÿ")
                .default(false)
                .interact()?;

            if !overwrite {
                anyhow::bail!("ç”¨æˆ·å–æ¶ˆè¦†ç›–ç°æœ‰é…ç½®æ–‡ä»¶");
            }
        }

        println!("âœ… é…ç½®æ–‡ä»¶ä½ç½®: {}", path.display());
        println!();

        Ok(path)
    }
}
