//! Actor-RTC è¾…åŠ©æœåŠ¡å™¨ä¸»ç¨‹åº
//!
//! å¯åŠ¨å’Œç®¡ç† WebRTC ç›¸å…³çš„è¾…åŠ©æœåŠ¡ï¼ŒåŒ…æ‹¬ä¿¡ä»¤ã€STUNã€TURN ç­‰æœåŠ¡

mod cli;
// mod config; // å·²è¿ç§»åˆ°ç‹¬ç«‹çš„ config crate
mod error;
mod observability;
mod process;
mod service;

use actrix_common::config::ActrixConfig;
use anyhow::Context;
use clap::Parser;
use observability::init_observability;
use service::{
    AisService, KsGrpcService, KsHttpService, ServiceContainer, ServiceManager, SignalingService,
    StunService, SupervisordGrpcService, TurnService,
};
use std::net::SocketAddr;
use std::path::{Path, PathBuf};
use supervit::{SupervitClient, SupervitConfig};
use tokio::task::JoinHandle;

use tracing::{error, info, warn};

macro_rules! bootstrap_info {
    ($($arg:tt)*) => {
        println!($($arg)*);
    };
}

macro_rules! bootstrap_error {
    ($($arg:tt)*) => {
        eprintln!($($arg)*);
    };
}

use cli::{Cli, Commands};
use error::{Error, Result};

/// Application launcher utilities
struct ApplicationLauncher;

fn main() -> Result<()> {
    let cli = Cli::parse();

    match &cli.command {
        Some(Commands::Test { config_file }) => {
            let config_path =
                ApplicationLauncher::find_config_file(config_file.as_ref().unwrap_or(&cli.config))?;
            ApplicationLauncher::test_config_file(&Some(config_path.clone()), &config_path)
        }
        None => {
            let config_path = ApplicationLauncher::find_config_file(&cli.config)?;

            // Create Tokio runtimeï¼ˆbefore running the applicationï¼‰
            let runtime = tokio::runtime::Builder::new_multi_thread()
                .enable_all()
                .build()?;

            // Run the asynchronous application
            runtime.block_on(ApplicationLauncher::run_application(&config_path))
        }
    }
}

impl ApplicationLauncher {
    /// Find config file with fallback locations
    fn find_config_file(provided_path: &PathBuf) -> Result<PathBuf> {
        // If the provided path is not the default "config.toml", check if it exists
        if provided_path != Path::new("config.toml") {
            if provided_path.exists() {
                bootstrap_info!("Using provided config file: {:?}", provided_path);
                return Ok(provided_path.clone());
            } else {
                bootstrap_error!("Provided config file not found: {:?}", provided_path);
                return Err(Error::custom(format!(
                    "Config file not found: {provided_path:?}"
                )));
            }
        }

        // Otherwise, try fallback locations
        let fallback_paths = vec![
            // 1. Current working directory
            PathBuf::from("config.toml"),
            // 2. System config directory
            PathBuf::from("/etc/actor-rtc-actrix/config.toml"),
        ];

        bootstrap_info!("Searching for config file in default locations...");

        for path in &fallback_paths {
            if path.exists() {
                bootstrap_info!("Found config file: {:?}", path);
                return Ok(path.clone());
            } else {
                bootstrap_info!("Config not found at: {:?}", path);
            }
        }

        // If no config file found, provide helpful error message
        bootstrap_error!("No configuration file found!");
        bootstrap_error!("Please create a config file in one of these locations:");
        for (i, path) in fallback_paths.iter().enumerate() {
            bootstrap_error!("  {}. {:?}", i + 1, path);
        }
        bootstrap_error!("Or specify a custom path with: actrix --config <path>");

        Err(Error::custom(
            "No configuration file found. Please create one or specify path with --config",
        ))
    }

    /// æµ‹è¯•é…ç½®æ–‡ä»¶æ˜¯å¦æœ‰æ•ˆ
    fn test_config_file(config_file: &Option<PathBuf>, default_config: &PathBuf) -> Result<()> {
        // Initialize basic logging for test command
        tracing_subscriber::fmt()
            .with_max_level(tracing::Level::INFO)
            .init();

        let config_path = config_file.as_ref().unwrap_or(default_config);
        match ActrixConfig::from_file(config_path) {
            Ok(config) => {
                info!("âœ… é…ç½®æ–‡ä»¶è§£ææˆåŠŸ: {:?}", config_path);

                // éªŒè¯é…ç½®
                match config.validate() {
                    Ok(()) => {
                        info!("âœ… é…ç½®éªŒè¯é€šè¿‡");
                    }
                    Err(errors) => {
                        error!("âŒ é…ç½®éªŒè¯å‘ç°é—®é¢˜:");
                        for (i, err) in errors.iter().enumerate() {
                            if err.starts_with("Warning:") {
                                info!("  {}. âš ï¸  {}", i + 1, err);
                            } else {
                                error!("  {}. âŒ {}", i + 1, err);
                            }
                        }
                        // æ£€æŸ¥æ˜¯å¦æœ‰éè­¦å‘Šé”™è¯¯
                        let has_errors = errors.iter().any(|e| !e.starts_with("Warning:"));
                        if has_errors {
                            return Err(Error::service_validation("é…ç½®éªŒè¯å¤±è´¥".to_string()));
                        }
                    }
                }

                // ä¸éœ€è¦å†æ¬¡åˆå§‹åŒ– observabilityï¼Œå› ä¸ºå·²ç»åˆå§‹åŒ–äº†åŸºæœ¬æ—¥å¿—
                info!("âœ… å®Œæ•´é…ç½®éªŒè¯é€šè¿‡");
                Ok(())
            }
            Err(e) => {
                error!("âŒ é…ç½®æ–‡ä»¶è§£æå¤±è´¥: {}", e);
                Err(Error::service_validation(format!("é…ç½®è§£æå¤±è´¥: {e}")))
            }
        }
    }

    /// è¿è¡Œåº”ç”¨ç¨‹åºçš„ä¸»å…¥å£
    async fn run_application(config_path: &Path) -> Result<()> {
        bootstrap_info!("ğŸ“„ åŠ è½½é…ç½®æ–‡ä»¶: {:?}", config_path);

        // åŠ è½½é…ç½®æ–‡ä»¶
        let config = match ActrixConfig::from_file(config_path) {
            Ok(config) => {
                bootstrap_info!("âœ… é…ç½®åŠ è½½æˆåŠŸ");

                // éªŒè¯é…ç½®
                if let Err(errors) = config.validate() {
                    bootstrap_error!("âŒ é…ç½®éªŒè¯å‘ç°é—®é¢˜:");
                    let mut has_critical_errors = false;
                    for (i, err) in errors.iter().enumerate() {
                        if err.starts_with("Warning:") {
                            bootstrap_info!("  {}. âš ï¸  {}", i + 1, err);
                        } else {
                            bootstrap_error!("  {}. âŒ {}", i + 1, err);
                            has_critical_errors = true;
                        }
                    }
                    if has_critical_errors {
                        return Err(Error::custom("é…ç½®éªŒè¯å¤±è´¥ï¼Œè¯·ä¿®å¤ä¸Šè¿°é”™è¯¯".to_string()));
                    }
                }

                config
            }
            Err(e) => {
                bootstrap_error!("âŒ é…ç½®åŠ è½½å¤±è´¥: {}", e);
                return Err(Error::custom(format!("é…ç½®åŠ è½½å¤±è´¥: {e}")));
            }
        };

        // ensure sqlite_path directory exists
        if !config.sqlite_path.exists() {
            std::fs::create_dir_all(&config.sqlite_path).with_context(|| {
                format!(
                    "Failed to create SQLite data directory: {}",
                    config.sqlite_path.display()
                )
            })?;
        }

        // åˆå§‹åŒ–å¯è§‚æµ‹æ€§ç³»ç»Ÿï¼ˆæ—¥å¿— + è¿½è¸ªï¼‰
        let _observability_guard = init_observability(&config)?;

        // å†™å…¥ PID æ–‡ä»¶ï¼ˆåœ¨ç»‘å®šç«¯å£ä¹‹å‰ï¼Œéœ€è¦æƒé™ï¼‰
        let pid_path = process::ProcessManager::write_pid_file(config.get_pid_path().as_deref())?;
        let _pid_guard = process::PidFileGuard::new(pid_path);

        // éœ€è¦åœ¨åˆ›å»ºæœåŠ¡ä¹‹å‰å…‹éš†é…ç½®ï¼Œå› ä¸ºæœåŠ¡å¯èƒ½éœ€è¦ root æƒé™æ¥ç»‘å®šç«¯å£
        let user = config.user.clone();
        let group = config.group.clone();

        // è¿è¡ŒæœåŠ¡
        Self::run_services_with_privilege_drop(config, user, group).await
    }

    /// è¿è¡ŒæœåŠ¡å¹¶åœ¨é€‚å½“æ—¶æœºåˆ‡æ¢ç”¨æˆ·æƒé™
    async fn run_services_with_privilege_drop(
        config: ActrixConfig,
        user: Option<String>,
        group: Option<String>,
    ) -> Result<()> {
        info!("ğŸš€ å¯åŠ¨ WebRTC è¾…åŠ©æœåŠ¡å™¨é›†ç¾¤");

        // First initialize the database,
        // ensure it is ready before any service that may access it starts
        actrix_common::storage::db::set_db_path(&config.sqlite_path)
            .await
            .map_err(|e| Error::custom(format!("æ•°æ®åº“åˆå§‹åŒ–å¤±è´¥: {e}")))?;
        info!("âœ… æ•°æ®åº“åˆå§‹åŒ–å®Œæˆ");

        // åˆå§‹åŒ–å…¨å±€å…³é—­é€šé“ï¼ˆä¾›æ‰€æœ‰æœåŠ¡å…±äº«ï¼‰
        let (shutdown_tx, _) = tokio::sync::broadcast::channel::<()>(10);

        // å®‰è£… Ctrl-C å¤„ç†å™¨ï¼Œç¡®ä¿ä»»ä½•é˜¶æ®µéƒ½èƒ½å¹¿æ’­å…³é—­
        setup_ctrl_c_handler(shutdown_tx.clone()).await;

        // å¦‚æœå¯ç”¨ KSï¼Œæ„å»º gRPC æœåŠ¡ future
        let mut handle_futs: Vec<JoinHandle<()>> = Vec::new();

        let mut service_manager =
            Self::create_service_manager(config.clone(), shutdown_tx.clone()).await?;

        if config.is_ks_enabled() {
            info!("å¯åŠ¨ KS gRPC æœåŠ¡å™¨...");
            let grpc_addr = "127.0.0.1:50052".parse().map_err(|e| {
                Error::service_startup(format!("Failed to parse gRPC address: {e}"))
            })?;
            let mut grpc_service = KsGrpcService::new(config.clone());
            let grpc_future = grpc_service
                .start(grpc_addr, shutdown_tx.clone())
                .await
                .map_err(|e| Error::service_startup(format!("KS gRPC åˆå§‹åŒ–å¤±è´¥: {e}")))?;

            handle_futs.push(grpc_future);
        }

        if let Some(supervisor_cfg) = &config.supervisor {
            if supervisor_cfg.shared_secret().trim().is_empty() {
                return Err(Error::service_startup(
                    "supervisor.client.shared_secret cannot be empty, refusing to start Supervisord gRPC service"
                        .to_string(),
                ));
            }

            info!("å¯åŠ¨ Supervisord gRPC æœåŠ¡å™¨...");
            let bind_addr_str = supervisor_cfg.supervisord.bind_addr();

            let bind_addr: SocketAddr = bind_addr_str.parse().map_err(|e| {
                Error::service_startup(format!(
                    "Failed to parse supervisord bind address {bind_addr_str}: {e}"
                ))
            })?;

            // Get service collector from service manager
            let service_collector = service_manager.service_collector();

            let mut grpc_service = SupervisordGrpcService::new(
                supervisor_cfg.clone(),
                config.sqlite_path.clone(),
                config.location_tag.clone(),
                service_collector,
            );
            let grpc_future = grpc_service
                .start(bind_addr, shutdown_tx.clone())
                .await
                .map_err(|e| Error::service_startup(format!("Supervisord gRPC åˆå§‹åŒ–å¤±è´¥: {e}")))?;
            handle_futs.push(grpc_future);
        }

        // wait for gRPC service to start
        tokio::time::sleep(std::time::Duration::from_millis(10)).await;

        let handle_futures = service_manager.start_all().await?;
        handle_futs.extend(handle_futures);
        info!("å¯åŠ¨æ‰€æœ‰æœåŠ¡...");

        // Start supervit after all services are started
        if config.is_supervisor_enabled()
            && let Some(supervisor_cfg) = &config.supervisor
        {
            let shared_secret = supervisor_cfg.shared_secret();
            let node_id = supervisor_cfg.node_id();
            let endpoint = supervisor_cfg.endpoint();

            let supervisord_cfg = &supervisor_cfg.supervisord;
            let client_config = SupervitConfig {
                node_id: node_id.to_string(),
                name: Some(supervisor_cfg.node_name().to_string()),
                location_tag: config.location_tag.clone(),
                endpoint: endpoint.to_string(),
                agent_addr: supervisord_cfg.advertised_addr(),
                connect_timeout_secs: supervisor_cfg.connect_timeout_secs,
                status_report_interval_secs: supervisor_cfg.status_report_interval_secs,
                health_check_interval_secs: supervisor_cfg.health_check_interval_secs,
                enable_tls: supervisor_cfg.enable_tls,
                tls_domain: supervisor_cfg.tls_domain.clone(),
                client_cert: supervisor_cfg.client_cert.clone(),
                client_key: supervisor_cfg.client_key.clone(),
                ca_cert: supervisor_cfg.ca_cert.clone(),
                shared_secret: Some(shared_secret.to_string()),
                max_clock_skew_secs: supervisor_cfg.max_clock_skew_secs,
                location: None,
                service_tags: Vec::new(),
            };

            // Get service collector from service manager
            let service_collector = service_manager.service_collector();

            info!("Starting Supervit client (register and status reporting)...");
            let register_handle = tokio::spawn(async move {
                // ServiceCollector now uses ServiceInfo internally, so we can pass it directly
                match SupervitClient::new(client_config.clone(), service_collector) {
                    Ok(mut client) => {
                        if let Err(e) = client.connect().await {
                            warn!("Supervit client connect failed: {}", e);
                            return;
                        }

                        if let Err(e) = client.register_node().await {
                            warn!("Register node failed: {}", e);
                        } else {
                            info!("âœ… Node registered successfully with services");
                        }

                        if let Err(e) = client.start_status_reporting().await {
                            warn!("Start status reporting failed: {}", e);
                        } else {
                            info!("âœ… Status reporting started");
                        }
                    }
                    Err(e) => warn!("Create supervit client failed: {}", e),
                }
            });

            handle_futs.push(register_handle);
        }

        // ç«¯å£ç»‘å®šå®Œæˆåï¼Œåˆ‡æ¢ç”¨æˆ·å’Œç»„
        info!("æœåŠ¡å¯åŠ¨å®Œæˆï¼Œå‡†å¤‡åˆ‡æ¢ç”¨æˆ·æƒé™...");
        if let Err(e) = process::ProcessManager::drop_privileges(user.as_deref(), group.as_deref())
        {
            error!("Failed to drop privileges: {}", e);
            // ç»§ç»­è¿è¡Œï¼Œä½†è®°å½•é”™è¯¯
        }

        // æ˜¾ç¤ºæœåŠ¡ä¿¡æ¯
        Self::display_service_info(&config);

        for handle in handle_futs {
            if let Err(e) = handle.await {
                error!("Service task terminated unexpectedly: {}", e);
                let _ = shutdown_tx.send(());
            }
        }
        service_manager.stop_all().await?;

        info!("ğŸ›‘ æ‰€æœ‰æœåŠ¡å·²å®‰å…¨å…³é—­");
        Ok(())
    }

    /// åˆ›å»ºæœåŠ¡ç®¡ç†å™¨
    async fn create_service_manager(
        config: ActrixConfig,
        shutdown_tx: tokio::sync::broadcast::Sender<()>,
    ) -> Result<ServiceManager> {
        info!("ğŸ“Š è®¡åˆ’å¯åŠ¨çš„æœåŠ¡:");
        // æ•°æ®åº“å·²åœ¨ run_services_with_privilege_drop ä¸­æå‰åˆå§‹åŒ–ï¼Œ
        // ä»¥ç¡®ä¿ SupervisordGrpcService å¯ä»¥å®‰å…¨å¤„ç† RPC å›è°ƒ

        // åˆå§‹åŒ– Prometheus metrics registry
        let registry = &actrix_common::metrics::REGISTRY;
        if let Err(e) = actrix_common::metrics::register_metrics() {
            warn!(
                "Prometheus metrics registration warning (may already be registered): {}",
                e
            );
        }

        // æ³¨å†Œå„æœåŠ¡çš„ metrics
        if config.is_ks_enabled()
            && let Err(e) = ks::register_ks_metrics(registry)
        {
            warn!(
                "KS metrics registration warning (may already be registered): {}",
                e
            );
        }

        info!("âœ… Prometheus metrics registry åˆå§‹åŒ–æˆåŠŸ");

        let mut service_manager = ServiceManager::new(config.clone(), shutdown_tx.clone());
        // æ·»åŠ ICEæœåŠ¡ - ç»†ç²’åº¦æ§åˆ¶STUNå’ŒTURN
        if config.is_ice_enabled() {
            if config.is_turn_enabled() {
                info!("  - TURN Server (UDP, åŒ…å«å†…ç½® STUN æ”¯æŒ)");
                let turn_service = TurnService::new(config.clone());
                service_manager.add_service(ServiceContainer::turn(turn_service));
            } else if config.is_stun_enabled() {
                info!("  - STUN Server (UDP)");
                let stun_service = StunService::new(config.clone());
                service_manager.add_service(ServiceContainer::stun(stun_service));
            }
        } else {
            info!("ICEæœåŠ¡(STUN/TURN)å·²ç¦ç”¨");
        }

        // æ·»åŠ HTTPè·¯ç”±æœåŠ¡ - æ¯ä¸ªæœåŠ¡ç‹¬ç«‹æ§åˆ¶
        if config.is_signaling_enabled() {
            info!("  - Signaling WebSocket Service (/signaling)");
            let signaling_service = SignalingService::new(config.clone());
            service_manager.add_service(ServiceContainer::signaling(signaling_service));
        }

        if config.is_ais_enabled() {
            info!("  - AIS Service (/ais)");
            let ais_service = AisService::new(config.clone());
            service_manager.add_service(ServiceContainer::ais(ais_service));
        }

        if config.is_ks_enabled() {
            info!("  - KS Service (/ks)");
            let ks_service = KsHttpService::new(config.clone());
            service_manager.add_service(ServiceContainer::ks(ks_service));
        }

        Ok(service_manager)
    }

    /// æ˜¾ç¤ºæœåŠ¡ä¿¡æ¯
    fn display_service_info(config: &ActrixConfig) {
        let is_dev = config.env == "dev";

        // Determine which URLs are available
        let mut urls = Vec::new();

        if is_dev && let Some(ref http_config) = config.bind.http {
            let http_url = format!("http://{}:{}", http_config.ip, http_config.port);
            let ws_url = format!("ws://{}:{}", http_config.ip, http_config.port);
            urls.push(("HTTP", http_url, ws_url));
        }

        if let Some(ref https_config) = config.bind.https {
            let https_url = format!("https://{}:{}", https_config.domain_name, https_config.port);
            let wss_url = format!("wss://{}:{}", https_config.domain_name, https_config.port);
            urls.push(("HTTPS", https_url, wss_url));
        }

        info!("âœ… æ‰€æœ‰æœåŠ¡å·²å¯åŠ¨");

        if !urls.is_empty() {
            for (protocol, http_url, _ws_url) in &urls {
                info!("ğŸ“¡ {} æœåŠ¡å™¨ç›‘å¬åœ¨: {}", protocol, http_url);
                info!("ğŸ”§ å¯ç”¨çš„APIç«¯ç‚¹:");
                if config.is_signaling_enabled() {
                    info!("  - {}/signaling/ws", _ws_url);
                }
                if config.is_ks_enabled() {
                    info!("  - {}/ks/health", http_url);
                }
                if config.is_ais_enabled() {
                    info!("  - {}/ais/health", http_url);
                    info!("  - {}/ais/register (POST protobuf)", http_url);
                }
            }
        } else {
            info!("ğŸ“¡ æ²¡æœ‰é…ç½® HTTP/HTTPS æœåŠ¡å™¨");
        }

        // æ˜¾ç¤º gRPC æœåŠ¡ä¿¡æ¯
        if config.is_ks_enabled() {
            info!("ğŸ”Œ gRPC æœåŠ¡:");
            info!("  - KS gRPC Server: 127.0.0.1:50052");
        }
        if config.is_supervisor_enabled()
            && let Some(supervisor_cfg) = &config.supervisor
        {
            let supervisord_cfg = &supervisor_cfg.supervisord;
            info!(
                "  - Supervisord gRPC Server: {} (advertised: {})",
                supervisord_cfg.bind_addr(),
                supervisord_cfg.advertised_addr()
            );
        }
    }
}

/// è®¾ç½®Ctrl-Cä¿¡å·å¤„ç†ç¨‹åº
async fn setup_ctrl_c_handler(shutdown_tx: tokio::sync::broadcast::Sender<()>) {
    tokio::spawn(async move {
        if let Err(e) = tokio::signal::ctrl_c().await {
            error!("æ— æ³•ç›‘å¬Ctrl-Cä¿¡å·: {}", e);
            return;
        }
        info!("æ”¶åˆ°Ctrl-Cä¿¡å·ï¼Œå¼€å§‹ä¼˜é›…å…³é—­...");
        let _ = shutdown_tx.send(());
    });
}
